Bug 11567 - [PATCH] Fix handling of invalid, non-path FPE
Summary: [PATCH] Fix handling of invalid, non-path FPE
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xfs (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2007-07-12 10:08 UTC by Ademar Reis
Modified: 2008-12-19 18:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Ademar Reis 2007-07-12 10:08:08 UTC
FPE's which are not valid and are not in the form of paths cause a
failure on the parser which invalidates all subsequent FPEs. If
the invalid FPE is the first on the list, this will cause a
fatal-error and the server will abort.

Oneliner patch, reproduced below:
(sent to xorg mailing-list some weeks ago)

---
 difs/fonts.c |    1 +
 1 files changed, 1 insertions(+), 0 deletions(-)

diff --git a/difs/fonts.c b/difs/fonts.c
index 2ba7c42..05fef26 100644
--- a/difs/fonts.c
+++ b/difs/fonts.c
@@ -688,6 +688,7 @@ set_font_path_elements(
        {
        NoticeF("ignoring font path element %s (bad font path descriptor)\n", name);
        fsfree(name);
+       cp += len;
        continue;
        }
        /* must be new -- make it */
Comment 1 Ademar Reis 2007-10-03 06:48:37 UTC
Any special reason for not having included this patch on xfs-1.0.5?
Comment 2 Alan Coopersmith 2008-12-19 18:45:18 UTC
(In reply to comment #1)
> Any special reason for not having included this patch on xfs-1.0.5?

Only one I know of is lack of time/developers to review all patches from
bugzilla before each release.

I've confirmed the bug and that the patch fixes it, so pushed to master
for the next release.   Thanks for the patch.

commit f7f149457581fa819c88e1958e7c154a6d9824fa
Author: Ademar de Souza Reis Jr <ademar@mandriva.com.br>
Date:   Fri Dec 19 18:43:53 2008 -0800

    Bug #11567: Fix handling of invalid, non-path FPE


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.