Bug #11567: Fix handling of invalid, non-path FPE

FPE's which are not valid and are not in the form of paths cause a
failure on the parser which invalidates all subsequent FPEs. If
the invalid FPE is the first on the list, this will cause a
fatal-error and the server will abort.

https://bugs.freedesktop.org/show_bug.cgi?id=11567

Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>